# tbl

./: Cargo.toml  README.md
.github/workflows/: release.yml
crates/tabl-cli/: Cargo.toml
crates/tabl-cli/src/: output.rs  transform.rs
crates/tabl-cli/src/cli/: args.rs
crates/tabl-cli/src/cli/subcommands/: schema.rs
crates/tabl-core/: Cargo.toml
crates/tabl-core/src/parquet/: parquet_summary.rs
