
[workspace]
members = ["crates/tabl-core", "crates/tabl-cli"]
resolver = "2"

[workspace.package]
version = "0.1.1"
edition = "2021"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/paradigmxyz/tabl"
repository = "https://github.com/paradigmxyz/tabl"
exclude = [".github/"]

[workspace.dependencies]
thiserror = "2.0"
tokio = { version = "1.45.0", features = ["full"] }
arrow = "55.0.0"
polars = { version = "0.43.1", features = [
    "json",
    "parquet",
    "lazy",
    "csv",
    "dtype-u8",
    "dtype-u16",
    "dtype-decimal",
    "string_encoding",
    "binary_encoding",
    "concat_str",
    "replace",
    "strings",
    "streaming",
    "timezones",
] }

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
